# canine

./: .env.test  .gitignore  .helmignore  Chart.yaml  Dockerfile  Dockerfile.dev  Gemfile  Procfile.dev  README.md  canine-0.1.10.tgz  canine-0.1.11.tgz  canine-0.1.4.tgz  canine-0.1.5.tgz  canine-0.1.6.tgz  canine-0.1.7.tgz  canine-0.1.8.tgz  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  esbuild.config.mjs  index.yaml  package.json  values.yaml
.github/workflows/: ci.yml  docker-build.yml  docker.yml
app/components/: combobox_component.html.erb  combobox_component.rb
app/controllers/: accounts_controller.rb  add_ons_controller.rb  application_controller.rb  clusters_controller.rb  comparisons_controller.rb  mcp_controller.rb  password_change_controller.rb  projects_controller.rb  static_controller.rb  two_factor_setup_controller.rb  two_factor_verification_controller.rb
app/helpers/: projects_helper.rb
app/jobs/: application_job.rb  (+1 more)
config/: application.rb  puma.rb  routes.rb
db/: schema.rb
docs/: CLOUD_DEV_ENVIRONMENT.md  FEATURE_FLAGS.md
error_tracking/: Cargo.toml  Dockerfile  README.md  swagger.yaml
error_tracking/helm/: Chart.yaml  values.yaml
error_tracking/helm/templates/: deployment.yaml  pvc.yaml
error_tracking/src/: db.rs  main.rs
error_tracking/tmp/: load_test.sh  send_errors.sh
resources/: comparisons.yml
templates/: NOTES.txt  cluster-issuer.yaml  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
(+375 files in other folders)
